trafik-setup-config/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: traefik-v2
spec:
  redirectScheme:
    scheme: https
    permanent: true
