trafik-setup-config/traefik-dashboard1.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: traefik-v2
spec:
  basicAuth:
    secret: traefik-dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-v2
spec:
  entryPoints:
  - web
  routes:
  - match: "Host(`traefik.100xsidd.me`)"
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-auth
      namespace: traefik-v2
